# Nova-Source

./: .gitignore  .markdownlint.json  .markdownlintignore  LICENSE  LOCAL_USAGE.md  MANIFEST.in  PUBLISH_READY.md  README.md  RELEASE.md  SECURITY.md  check_security.py  publish.ps1  pyproject.toml
examples/: README.md  nova_optimization_test.py  performance_test_formatter.py
performance_results/: performance_report.md
src/nova/: __init__.py  cli.py
src/nova/auditing/: __init__.py  analyzer.py  quality.py
src/nova/config/examples/: memory_config.json
src/nova/core/: config.py  exceptions.py  logging.py
src/nova/markdown/: README.md  __init__.py  backup.py  formatter.py
src/nova/models/: __init__.py
src/nova/monitoring/: __init__.py  nova_memory_monitor.py
src/nova/plugins/: __init__.py  discord.py
src/nova/testing/: performance_tester.py  test_memory_monitor.py
src/nova/tools/: performance_tester.py  test_memory_monitor.py  test_performance_example.py
src/nova/utils/: __init__.py
src/nova_audit/: __init__.py  analyzer.py
src/nova_sensor/: README.md  __init__.py  cli.py  performance_tester.py  test_performance_example.py
tests/markdown/: __init__.py  test_backup.py  test_formatter.py
